# cpi

./: .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  MANIFEST.json  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
audit/: AUDIT_META.json  ENV_FINGERPRINT.json  P1.audit.jsonl  P2.audit.jsonl
cpi_kit/: cli.py  utils.py
data/: Problem1_fixed.json  Problem2_fixed.json
docs/: AUDIT_SCHEMA.md  P1.md  P2.md  VibeCheck_MCP.md  example_config.yml
docs/schemas/: P1.audit.schema.json  P2.audit.schema.json
harness/: run_bench.py  vibecheck_client.py
harness/providers/: __init__.py  base.py  gemini_cli.py
harness/scripts/: restart.bat  restart.sh  run-once.sh
scripts/: Script.py  sanitize_logs.py
traces/P1/: NoCPI_2025-07-20_01-34-09.txt  NoCPI_2025-07-20_01-43-17.txt  NoCPI_2025-07-20_01-49-05.txt  NoCPI_2025-07-20_01-57-53.txt  NoCPI_2025-07-20_02-08-33.txt  NoCPI_2025-07-20_02-11-44.txt  NoCPI_2025-07-20_02-23-48.txt  NoCPI_2025-07-20_02-32-42.txt  NoCPI_2025-07-20_02-36-15.txt  NoCPI_2025-07-20_02-43-12.txt  NoCPI_2025-07-20_02-52-15.txt  NoCPI_2025-07-20_02-52-18.txt  NoCPI_2025-07-21_18-49-07.txt  NoCPI_2025-07-21_18-51-28.txt  NoCPI_2025-07-21_18-54-28.txt  NoCPI_2025-07-21_18-56-53.txt  NoCPI_2025-07-21_19-07-32.txt  NoCPI_2025-07-21_19-16-29.txt  NoCPI_2025-07-21_19-20-57.txt  NoCPI_2025-07-21_20-30-24.txt  NoCPI_2025-07-21_20-33-26.txt  NoCPI_2025-07-21_20-38-46.txt  NoCPI_2025-07-21_20-43-14.txt  NoCPI_2025-07-21_20-55-39.txt  NoCPI_2025-07-21_20-58-21.txt  (+38 more)
(+101 files in other folders)
